<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2013 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<LinearLayout android:id="@+id/tvLinearLayout"
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:background="#FFFFFFFF">

		<ScrollView
		    android:id="@+id/svResult"
		    android:layout_width="fill_parent"
		    android:layout_height="fill_parent"
		    android:layout_weight="1.0"
		    android:background="#FFFFFFFF"
		    android:fillViewport="true" >

        <TextView
            android:id="@+id/data_value"
            android:layout_width="fill_parent"
            android:layout_height="376dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:text="@string/no_data"
            android:textSize="16sp" />

		</ScrollView>
    <TableLayout android:id="@+id/TableLayout02"
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content"
		android:layout_margin="0px"
		android:stretchColumns="1"
		android:layout_gravity="bottom">
        <TableRow>
            <Button android:id="@+id/btnOpen"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/open"
                android:layout_gravity="top">
            </Button>
            <Button android:id="@+id/btnClose"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/close"
                android:layout_gravity="top">
            </Button>
            <Button android:id="@+id/btnStop"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/stop"
                android:layout_gravity="top">
            </Button>
                <Button android:id="@+id/btnLamp"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/lamp"
                android:layout_gravity="top">
            </Button>
            </TableRow>
           
        <TableRow>
            <CheckBox
                android:id="@+id/ckAutoReply"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/autoreply" />
            <CheckBox
                android:id="@+id/ckCRLF"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/appendCRLF" />
            
        </TableRow>
		<TableRow>
			<EditText
    			android:id="@+id/edtSend"     
    			android:layout_width="fill_parent"    
    			android:layout_height="wrap_content"
    			android:layout_span="2"/>
			<Button android:id="@+id/btnSend"
				android:layout_height="wrap_content" 
				android:layout_width="wrap_content"
				android:text="@string/send"
				android:layout_gravity="bottom">
			</Button>
            <Button android:id="@+id/btnHex"
                android:layout_height="wrap_content" 
                android:layout_width="wrap_content"
                android:text="@string/hex"
                android:layout_gravity="bottom">
            </Button>
		</TableRow>
	</TableLayout>
</LinearLayout>